# Wave

./: Cargo.toml  README.md
src/: app.rs  cli.rs  fs.rs  log.rs  main.rs  preview.rs  template.rs  terminal.rs
src/color/: mod.rs  palette.rs  rgb.rs  wave.rs
src/config/: mod.rs
