[package]
name = "wave"
version = "0.1.0"
edition = "2021"
description = "Fast 16-color generation from images"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }
serde_json = "1.0"
